--- a/docs/customization/models.mdx
+++ b/docs/customization/models.mdx
@@ -18,8 +18,8 @@ description: "Models form the foundation of the entire agent experience, offerin
 
 | Model role   | Best open models                                                                                                                                 | Best closed models                                                                                                                                                                                                                                             | Notes                                                                        |
 | :----------- | :----------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------- |
-| Agent / Plan | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [Devstral (27B)](https://hub.continue.dev/ollama/devstral), Kimi K2 (1T), [gpt-oss (120B)](), [gpt-oss (20B)](), [GLM 4.5 (355B), GLM 4.5 Air (106B) | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed models are slightly better than open models                           |
-| Chat / Edit  | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [gpt-oss (120B)](), [gpt-oss (20B)]()                                                                          | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed and open models have pretty similar performance                       |
+| Agent / Plan | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [Devstral (27B)](https://hub.continue.dev/ollama/devstral), Kimi K2 (1T), [gpt-oss (120B)](https://hub.continue.dev/openrouter/gpt-oss-120b), [gpt-oss (20B)](https://hub.continue.dev/ollama/gpt-oss-20b), [GLM 4.5 (355B), GLM 4.5 Air (106B) | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed models are slightly better than open models                           |
+| Chat / Edit  | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [gpt-oss (120B)](https://hub.continue.dev/openrouter/gpt-oss-120b), [gpt-oss (20B)](https://hub.continue.dev/ollama/gpt-oss-20b)                                                                          | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed and open models have pretty similar performance                       |
 | Autocomplete | [QwenCoder2.5 (1.5B)](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b), [QwenCoder2.5 (7B)](https://hub.continue.dev/ollama/qwen2.5-coder-7b)                                                    | [Codestral](https://hub.continue.dev/mistral/codestral), [Mercury Coder](https://hub.continue.dev/inceptionlabs/mercury-coder)                                                                                                                                                                                       | Closed models are slightly better than open models                           |
 | Apply        | N/A                                                                                                                                              | [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply), [Morph Fast Apply](https://hub.continue.dev/morphllm/morph-v2)                                                                                                                          | Open models are not good enough for this model role |
 | Embed        | [Nomic Embed Text](https://hub.continue.dev/ollama/nomic-embed-text-latest), Qwen3 Embedding                                                     | [Voyage Code 3](https://hub.continue.dev/voyageai/voyage-code-3), [Morph Embeddings](https://hub.continue.dev/morphllm/morph-embedding-v2), Codestral Embed                                                                                                   | Closed models are slightly better than open models                           |
@@ -36,10 +36,10 @@ Read more about [model roles](/customize/model-roles), [model capabilities](/cus
 
 # Frontier Models
 
-[Claude 4 Sonnet](hub.continue.dev/anthropic/claude-4-sonnet) from Anthropic
+[Claude 4 Sonnet](https://hub.continue.dev/anthropic/claude-4-sonnet) from Anthropic
 
 1. Get your API key from [Anthropic](https://console.anthropic.com/)
-2. Add [Claude 4 Sonnet](hub.continue.dev/anthropic/claude-4-sonnet) to an agent on Continue Hub
+2. Add [Claude 4 Sonnet](https://hub.continue.dev/anthropic/claude-4-sonnet) to an agent on Continue Hub
 3. Add `ANTHROPIC_API_KEY` as a [User Secret](https://docs.continue.dev/hub/secrets/secret-types#user-secrets) on Continue Hub [here](https://hub.continue.dev/settings/secrets)
 4. Click `Reload config` in the agent selector in the Continue IDE extension
 
