--- a/docs/customization/models.mdx
+++ b/docs/customization/models.mdx
@@ -18,12 +18,12 @@ description: "Models form the foundation of the entire agent experience, offerin
 
 | Model role   | Best open models                                                                                                                                 | Best closed models                                                                                                                                                                                                                                             | Notes                                                                        |
 | :----------- | :----------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------- |
-| Agent / Plan | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [Devstral (27B)](https://hub.continue.dev/ollama/devstral), Kimi K2 (1T), [gpt-oss (120B)](https://hub.continue.dev/openrouter/gpt-oss-120b), [gpt-oss (20B)](https://hub.continue.dev/ollama/gpt-oss-20b), [GLM 4.5 (355B), GLM 4.5 Air (106B) | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed models are slightly better than open models                           |
+| Agent / Plan | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [Devstral (27B)](https://hub.continue.dev/ollama/devstral), [Kimi K2 (1T)](https://hub.continue.dev/openrouter/kimi-k2), [gpt-oss (120B)](https://hub.continue.dev/openrouter/gpt-oss-120b), [gpt-oss (20B)](https://hub.continue.dev/ollama/gpt-oss-20b), GLM 4.5 (355B), GLM 4.5 Air (106B) | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed models are slightly better than open models                           |
 | Chat / Edit  | [Qwen3 Coder (480B)](https://hub.continue.dev/openrouter/qwen3-coder), [Qwen3 Coder (30B)](https://hub.continue.dev/ollama/qwen3-coder-30b), [gpt-oss (120B)](https://hub.continue.dev/openrouter/gpt-oss-120b), [gpt-oss (20B)](https://hub.continue.dev/ollama/gpt-oss-20b)                                                                          | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed and open models have pretty similar performance                       |
 | Autocomplete | [QwenCoder2.5 (1.5B)](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b), [QwenCoder2.5 (7B)](https://hub.continue.dev/ollama/qwen2.5-coder-7b)                                                    | [Codestral](https://hub.continue.dev/mistral/codestral), [Mercury Coder](https://hub.continue.dev/inceptionlabs/mercury-coder)                                                                                                                                                                                       | Closed models are slightly better than open models                           |
 | Apply        | N/A                                                                                                                                              | [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply), [Morph Fast Apply](https://hub.continue.dev/morphllm/morph-v2)                                                                                                                          | Open models are not good enough for this model role |
 | Embed        | [Nomic Embed Text](https://hub.continue.dev/ollama/nomic-embed-text-latest), Qwen3 Embedding                                                     | [Voyage Code 3](https://hub.continue.dev/voyageai/voyage-code-3), [Morph Embeddings](https://hub.continue.dev/morphllm/morph-embedding-v2), Codestral Embed                                                                                                   | Closed models are slightly better than open models                           |
-| Rerank       | zerank-1], zerank-1-small, Qwen3 Reranker                                                                                                      | [Voyage Rerank 2.5](https://hub.continue.dev/voyageai/rerank-2-5), Relace Code Rerank, [Morph Rerank](https://hub.continue.dev/morphllm/morph-rerank-v2)                                                                                                       | Open models are beginning to emerge for this model role                      |
+| Rerank       | zerank-1, zerank-1-small, Qwen3 Reranker                                                                                                      | [Voyage Rerank 2.5](https://hub.continue.dev/voyageai/rerank-2-5), Relace Code Rerank, [Morph Rerank](https://hub.continue.dev/morphllm/morph-rerank-v2)                                                                                                       | Open models are beginning to emerge for this model role                      |
 | Next Edit    | N/A                                                                                                                                            | [Mercury Coder](https://hub.continue.dev/inceptionlabs/mercury-coder)                                                                                                                                                                                                                                               | Closed models are significantly better than open models                      |
 
 ## Learn More About Models
