--- a/docs/guides/overview.mdx
+++ b/docs/guides/overview.mdx
@@ -11,6 +11,10 @@ description: "Comprehensive collection of practical guides for Continue includin
 - [Running Continue Without Internet](/guides/running-continue-without-internet) - Offline development setup
 - [Llama 3.1 Setup](/guides/llama3.1) - Getting started with Llama 3.1
 
+## Continuous AI 
+- [Continuous AI: A Developer's Guide](/guides/continuous-ai) - Integrating AI into development workflows
+- [How to Use Continue CLI (cn)](/guides/continue-cli) - Command-line interface for Continue
+
 ## What Advanced Tutorials Are Available
 
 - [Build Your Own Context Provider](/guides/build-your-own-context-provider) - Create custom context providers
